Fix Ribbon alignment

--- a/style.css
+++ b/style.css
@@ -789,7 +789,7 @@ a:hover {
 
 .ribbon a{
 	background: url('images/ribbon_bg.png') repeat-x center;
-	padding: 20px 0 30px;
+	padding: 21px 0 30px;
 	color:#e0d7d7;
 	position: relative;
 	top: -8px;
